# consensus-buy

./: .dockerignore  .env.example  .gitignore  Dockerfile  PITCH.md  README.md  package-lock.json  package.json  render.yaml  start-consensusbuy.sh  tailwind.config.ts
backend/: pyproject.toml
backend/app/: contracts.py  crossmint.py  deep_agents_workflow.py  main.py
src/: index.css
src/components/: AgentLog.tsx  ApprovalPanel.tsx  ConsensusConfetti.tsx  PurchaseHistory.tsx  RequestPanel.tsx  SpendingAnalysis.tsx
src/lib/: consensusApi.ts  consensusTypes.ts  mockAgentData.ts  mockConsensusFallback.ts
src/pages/: Index.tsx
src/test/: example.test.ts
